updated the header files to fix spacing issues. Table is divided, but requires proper margines.

--- a/styles/header.css
+++ b/styles/header.css
@@ -69,3 +69,12 @@
 .nav-menu li:hover > a {
   color: #F5AA1c;
 }
+
+#siteLogo{
+  width: 200px;
+  white-space:nowrap !important;
+}
+
+span{
+  white-space:nowrap !important;
+}
